solved the login validation bug; added toggle vivisibility for password

--- a/src/app/login-page/login-page.component.scss
+++ b/src/app/login-page/login-page.component.scss
@@ -83,4 +83,11 @@
         }
       }
     }
+
+    .visibility-button {
+      @include dFlex($ai: center, $jc: center);
+      margin-right: 8px;
+      width: 50px !important;
+      height: auto !important;
+    }
   }
